# Try1000

./: .gitignore  README.md
backend/: .env.example  .fcignore  requirements.txt  s.yaml  seed.py
backend-js/: .fcignore  build.sh  index.js  package-lock.json  package.json  s.yaml  seed.js
backend-js/src/: app.js  config.js  database.js  router.js  routes.js
backend/.deploy/: aliyun.md  template.yml
backend/app/: config.py  database.py  main.py
backend/server/: config.py  database.py  main.py
docs/: ai-design.md  architecture.md  frontend-design.md  tactics-impact.md
engine/: .env.example  pyproject.toml
engine/tests/: test_benchmark.py  test_llm_policy.py  test_policy_factory.py  test_smoke.py
engine/try1000_engine/: __init__.py  agent.py  config.py  runner.py
engine/try1000_engine/actions/: __init__.py  base.py  cross.py  dribble.py  intercept.py  move.py  pass_action.py  shoot.py  tackle.py
engine/try1000_engine/ai/: __init__.py  baseline_agentpitch.py  evaluator.py  generated_policy.py  llm_generator.py  perception.py  policy.py  policy_factory.py  roles.py  rule_based.py
engine/try1000_engine/match/: __init__.py  action.py  action_resolver.py  are_engine.py  event_system.py  formation.py  match_engine.py  replay.py  result.py
engine/try1000_engine/physics/: __init__.py  ball.py  ball_physics_system.py  collision.py  player.py  player_movement_system.py  simulation_utils.py  stamina.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
scripts/: convert_fifa_teams.py
tools/scraper/: README.md  download.sh  (+4 more)
(+1023 files in other folders)
