[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "try1000-engine"
version = "0.1.0"
description = "Try1000 football tactics simulation engine"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "ably>=2.0",
    "supabase>=2.0",
    "dashscope>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
